--- a/index.html
+++ b/index.html
@@ -4,87 +4,96 @@
 <head>
     <meta charset="utf-8">
     <meta name="author" content="Piotr Żołnacz">
-    <meta name="description" content="Expenses Log Privacy Policy">
+    <meta name="description" content="Expenses Log - Privacy Policy">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Expenses Log - Privacy Policy</title>
 </head>
 <body>
-<section>
-    <h1>Your Data Stays With You</h1>
-    <p>We
-        respect your privacy. This app functions entirely
-        offline and does not
-        collect or share any data. This policy applies to
-        all users worldwide,
-        including children of all ages.
-        We do not collect,
-        store, transmit, or share any personal or
-        non-personal information. The
-        app works completely offline. All
-        features can be used without an
-        internet connection, and no data is
-        ever accessed or sent anywhere.</p>
-</section>
-<section>
-    <h1>Local-Only Data Storage</h1>
-    <p>All
-        information you enter into the app is stored
-        only on your own device.
-        It is never uploaded, backed up to external
-        servers, or shared with
-        anyone. We do not and cannot access this
-        information.</p>
-</section>
-<section>
-    <h1>No Third-Party Services</h1>
-    <p>The
-        app does not use third-party SDKs, analytics
-        tools, ad networks, or
-        any external services that collect data. No one
-        else, including us,
-        has access to your app usage or data.</p>
-</section>
-<section>
-    <h1>Data Control and Deletion</h1>
-    <p>You have complete control over the information you
-        enter. You can delete your data at any time by uninstalling the app or
-        clearing its storage. Since nothing is stored externally, no
-        additional steps are required.</p>
-</section>
-<section>
-    <h1>Children’s Privacy</h1>
-    <p>The app is safe for all users, including children
-        under the age of 13. No personal data is collected, making it
-        compliant with global child privacy laws such as COPPA and GDPR-K.</p>
-</section>
-<section>
-    <h1>Your Rights</h1>
-    <p>As no data is collected, there is nothing for you
-        to access, update, or delete through us. All data is yours and remains
-        solely on your device.</p>
-</section>
-<section>
-    <h1>Changes to This Policy</h1>
-    <p>If the app’s functionality changes in a way that
-        affects your privacy, this Privacy Policy will be updated accordingly.
-        We encourage users to review the policy from time to time.</p>
-</section>
-<section>
-    <h1>Contact Information</h1>
-    <p>If you
-        have any questions or concerns regarding this
-        Privacy Policy, you may
-        contact us by email.</p>
-    <p><a href="mailto:simkovadagmar80@gmail.com">simkovadagmar80@gmail.com</a></p>
-</section>
-<section>
-    <h1>Effective date</h1>
-    <p>The effective date refers to the day this Privacy
-        Policy was last updated or went into effect. Any changes made to how
-        the app handles your data will be reflected in an updated version of
-        this policy. We encourage users to review this policy periodically to
-        stay informed about how their information is treated.</p>
-    <p>2025-08-01</p>
-</section>
+<div class="row">
+    <header>
+        <h1>Expenses Log - Privacy Policy</h1>
+    </header>
+    <nav>
+        <a href="index.html">English</a>
+        <a href="polish.html">Polski</a>
+    </nav>
+    <section>
+        <h1>Your Data Stays With You</h1>
+        <p>We
+            respect your privacy. This app functions entirely
+            offline and does not
+            collect or share any data. This policy applies to
+            all users worldwide,
+            including children of all ages.
+            We do not collect,
+            store, transmit, or share any personal or
+            non-personal information. The
+            app works completely offline. All
+            features can be used without an
+            internet connection, and no data is
+            ever accessed or sent anywhere.</p>
+    </section>
+    <section>
+        <h1>Local-Only Data Storage</h1>
+        <p>All
+            information you enter into the app is stored
+            only on your own device.
+            It is never uploaded, backed up to external
+            servers, or shared with
+            anyone. We do not and cannot access this
+            information.</p>
+    </section>
+    <section>
+        <h1>No Third-Party Services</h1>
+        <p>The
+            app does not use third-party SDKs, analytics
+            tools, ad networks, or
+            any external services that collect data. No one
+            else, including us,
+            has access to your app usage or data.</p>
+    </section>
+    <section>
+        <h1>Data Control and Deletion</h1>
+        <p>You have complete control over the information you
+            enter. You can delete your data at any time by uninstalling the app or
+            clearing its storage. Since nothing is stored externally, no
+            additional steps are required.</p>
+    </section>
+    <section>
+        <h1>Children’s Privacy</h1>
+        <p>The app is safe for all users, including children
+            under the age of 13. No personal data is collected, making it
+            compliant with global child privacy laws such as COPPA and GDPR-K.</p>
+    </section>
+    <section>
+        <h1>Your Rights</h1>
+        <p>As no data is collected, there is nothing for you
+            to access, update, or delete through us. All data is yours and remains
+            solely on your device.</p>
+    </section>
+    <section>
+        <h1>Changes to This Policy</h1>
+        <p>If the app’s functionality changes in a way that
+            affects your privacy, this Privacy Policy will be updated accordingly.
+            We encourage users to review the policy from time to time.</p>
+    </section>
+    <section>
+        <h1>Contact Information</h1>
+        <p>If you
+            have any questions or concerns regarding this
+            Privacy Policy, you may
+            contact us by email.</p>
+        <p><a href="mailto:simkovadagmar80@gmail.com">simkovadagmar80@gmail.com</a></p>
+    </section>
+    <section>
+        <h1>Effective date</h1>
+        <p>The effective date refers to the day this Privacy
+            Policy was last updated or went into effect. Any changes made to how
+            the app handles your data will be reflected in an updated version of
+            this policy. We encourage users to review this policy periodically to
+            stay informed about how their information is treated.</p>
+        <p>2025-08-01</p>
+    </section>
+</div>
 </body>
 </html>
