--- a/empty.html
+++ b/empty.html
@@ -3,9 +3,9 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="author" content="Piotr Żołnacz">
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta content="Piotr Żołnacz" name="author">
+    <meta content="" name="description">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
     <title></title>
 </head>
 <body>
@@ -14,6 +14,7 @@
         <h1></h1>
     </header>
     <nav>
+        <a href="afrikaans.html">Afrikaans</a>
         <a href="index.html">English</a>
         <a href="polish.html">Polski</a>
     </nav>
