--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="author" content="Piotr Żołnacz">
-    <meta name="description" content="Expenses Log - Privacy Policy">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta content="Piotr Żołnacz" name="author">
+    <meta content="Expenses Log - Privacy Policy" name="description">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
     <title>Expenses Log - Privacy Policy</title>
 </head>
 <body>
@@ -15,6 +15,7 @@
     </header>
     <nav>
         <a href="index.html">English</a>
+        <a href="afrikaans.html">Afrikaans</a>
         <a href="polish.html">Polski</a>
     </nav>
     <section>
