--- a/empty.html
+++ b/empty.html
@@ -15,8 +15,21 @@
     </header>
     <nav>
         <a href="afrikaans.html">Afrikaans</a>
+        <a href="albanian.html">Shqip</a>
+        <a href="amharic.html">አማርኛ (Amarəñña)</a>
+        <a href="arabic.html">اَلْعَرَبِيَّةُ
+            (al-ʿarabiyyah)</a>
+        <a href="armenian.html">Հայերեն (Hayeren)</a>
+        <a href="assamese.html">অসমীয়া (Ôxômiya)</a>
+        <a href="azerbaijani.html">Azərbaycan dili; آذربایجان دیلی; Азәрбајҹан дили</a>
+        <a href="bambara.html">بَمَنَنكَن ;ߓߡߊߣߊ߲ߞߊ߲ (Bamanankan)</a>
+        <a href="bashkir.html">Башҡорт теле; Başqort tele</a>
+        <a href="basque.html">Euskara/Euskera</a>
+        <a href="belarusian.html">Беларуская мова (Biełaruskaja mova)</a>
         <a href="index.html">English</a>
         <a href="polish.html">Polski</a>
+
+        <a href=""></a>
     </nav>
     <section>
         <h1></h1>
