--- a/afrikaans.html
+++ b/afrikaans.html
@@ -15,10 +15,11 @@
     </header>
     <nav>
         Afrikaans
+        <a href="albanian.html">Shqip</a>
         <a href="amharic.html">አማርኛ</a>
+        <a href="arabic.html">اَلْعَرَبِيَّةُ</a>
         <a href="index.html">English</a>
         <a href="polish.html">Polski</a>
-        <a href="albanian.html">Shqip</a>
     </nav>
     <section>
         <h1>Jou data bly by jou</h1>
