--- a/polish.html
+++ b/polish.html
@@ -16,9 +16,10 @@
     <nav>
         Polish
         <a href="afrikaans.html">Afrikaans</a>
-        <a href="amharic.html">አማርኛ</a>
-        <a href="index.html">English</a>
         <a href="albanian.html">Shqip</a>
+        <a href="amharic.html">አማርኛ</a>
+        <a href="arabic.html">اَلْعَرَبِيَّةُ</a>
+        <a href="index.html">English</a>
     </nav>
     <section>
         <h1>Twoje dane pozostają z Tobą</h1>
