--- a/amharic.html
+++ b/amharic.html
@@ -16,9 +16,10 @@
     <nav>
         አማርኛ
         <a href="afrikaans.html">Afrikaans</a>
+        <a href="albanian.html">Shqip</a>
+        <a href="arabic.html">اَلْعَرَبِيَّةُ</a>
         <a href="index.html">English</a>
         <a href="polish.html">Polski</a>
-        <a href="albanian.html">Shqip</a>
     </nav>
     <section>
         <h1>ውሂብዎ ከእርስዎ ጋር ይቀራል</h1>
