--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
     <nav>
         English
         <a href="afrikaans.html">Afrikaans</a>
-        <a href="amharic.html">አማርኛ</a>
-        <a href="polish.html">Polski</a>
         <a href="albanian.html">Shqip</a>
+        <a href="amharic.html">አማርኛ</a>
+        <a href="arabic.html">اَلْعَرَبِيَّةُ</a>
+        <a href="polish.html">Polski</a>
     </nav>
     <section>
         <h1>Your Data Stays With You</h1>
