--- a/arabic.html
+++ b/arabic.html
@@ -16,8 +16,9 @@
     <nav>
         اَلْعَرَبِيَّةُ
         <a href="afrikaans.html">Afrikaans</a>
-        <a href="albanian.html">Shqip</a>
         <a href="amharic.html">አማርኛ</a>
+        <a href="albanian.html">Shqip</a>
+        <a href="armenian.html">Հայերեն</a>
         <a href="index.html">English</a>
         <a href="polish.html">Polski</a>
 
