--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
     <nav>
         English
         <a href="afrikaans.html">Afrikaans</a>
-        <a href="albanian.html">Shqip</a>
         <a href="amharic.html">አማርኛ</a>
+        <a href="albanian.html">Shqip</a>
+        <a href="armenian.html">Հայերեն</a>
         <a href="arabic.html">اَلْعَرَبِيَّةُ</a>
         <a href="polish.html">Polski</a>
     </nav>
