--- a/albanian.html
+++ b/albanian.html
@@ -17,6 +17,7 @@
         Shqip
         <a href="afrikaans.html">Afrikaans</a>
         <a href="amharic.html">አማርኛ</a>
+        <a href="armenian.html">Հայերեն</a>
         <a href="arabic.html">اَلْعَرَبِيَّةُ</a>
         <a href="index.html">English</a>
         <a href="polish.html">Polski</a>
