--- a/empty.html
+++ b/empty.html
@@ -15,8 +15,9 @@
     </header>
     <nav>
         <a href="afrikaans.html">Afrikaans</a>
-        <a href="albanian.html">Shqip</a>
         <a href="amharic.html">አማርኛ</a>
+        <a href="albanian.html">Shqip</a>
+        <a href="armenian.html">Հայերեն</a>
         <a href="arabic.html">اَلْعَرَبِيَّةُ</a>
         <a href="index.html">English</a>
         <a href="polish.html">Polski</a>
