--- a/amharic.html
+++ b/amharic.html
@@ -17,8 +17,9 @@
         አማርኛ
         <a href="afrikaans.html">Afrikaans</a>
         <a href="albanian.html">Shqip</a>
-        <a href="armenian.html">Հայերեն</a>
         <a href="arabic.html">اَلْعَرَبِيَّةُ</a>
+        <a href="armenian.html">Հայերեն</a>
+        <a href="assamese.html">অসমীয়া</a>
         <a href="index.html">English</a>
         <a href="polish.html">Polski</a>
     </nav>
