--- a/armenian.html
+++ b/armenian.html
@@ -16,13 +16,12 @@
     <nav>
         Հայերեն
         <a href="afrikaans.html">Afrikaans</a>
-        <a href="amharic.html">አማርኛ</a>
         <a href="albanian.html">Shqip</a>
+        <a href="amharic.html">አማርኛ</a>
         <a href="arabic.html">اَلْعَرَبِيَّةُ</a>
+        <a href="assamese.html">অসমীয়া</a>
         <a href="index.html">English</a>
         <a href="polish.html">Polski</a>
-
-        <a href=""></a>
     </nav>
     <section>
         <h1>Ձեր տվյալները մնում են ձեզ հետ</h1>
