--- a/polish.html
+++ b/polish.html
@@ -16,10 +16,11 @@
     <nav>
         Polish
         <a href="afrikaans.html">Afrikaans</a>
-        <a href="amharic.html">አማርኛ</a>
         <a href="albanian.html">Shqip</a>
-        <a href="armenian.html">Հայերեն</a>
+        <a href="amharic.html">አማርኛ</a>
         <a href="arabic.html">اَلْعَرَبِيَّةُ</a>
+        <a href="armenian.html">Հայերեն</a>
+        <a href="assamese.html">অসমীয়া</a>
         <a href="index.html">English</a>
     </nav>
     <section>
