--- a/arabic.html
+++ b/arabic.html
@@ -20,6 +20,7 @@
         <a href="amharic.html">አማርኛ</a>
         <a href="armenian.html">Հայերեն</a>
         <a href="assamese.html">অসমীয়া</a>
+        <a href="azerbaijani.html">Azərbaycan dili</a>
         <a href="index.html">English</a>
         <a href="polish.html">Polski</a>
     </nav>
