--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <a href="arabic.html">اَلْعَرَبِيَّةُ</a>
         <a href="armenian.html">Հայերեն</a>
         <a href="assamese.html">অসমীয়া</a>
+        <a href="azerbaijani.html">Azərbaycan dili</a>
         <a href="polish.html">Polski</a>
     </nav>
     <section>
