--- a/azerbaijani.html
+++ b/azerbaijani.html
@@ -21,10 +21,9 @@
         <a href="arabic.html">اَلْعَرَبِيَّةُ</a>
         <a href="armenian.html">Հայերեն</a>
         <a href="assamese.html">অসমীয়া</a>
+        <a href="bambara.html">Bamanankan</a>
         <a href="index.html">English</a>
         <a href="polish.html">Polski</a>
-
-        <a href=""></a>
     </nav>
     <section>
         <h1>Məlumatlarınız sizinlə qalır</h1>
