--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         <a href="armenian.html">Հայերեն</a>
         <a href="assamese.html">অসমীয়া</a>
         <a href="azerbaijani.html">Azərbaycan dili</a>
-        <a href="polish.html">Polski</a>
+        <a href="bambara.html">Bamanankan</a>
+        <a href="index.html">English</a>
     </nav>
     <section>
         <h1>Your Data Stays With You</h1>
