--- a/armenian.html
+++ b/armenian.html
@@ -21,6 +21,7 @@
         <a href="arabic.html">اَلْعَرَبِيَّةُ</a>
         <a href="assamese.html">অসমীয়া</a>
         <a href="azerbaijani.html">Azərbaycan dili</a>
+        <a href="bambara.html">Bamanankan</a>
         <a href="index.html">English</a>
         <a href="polish.html">Polski</a>
     </nav>
