--- a/assamese.html
+++ b/assamese.html
@@ -22,6 +22,7 @@
         <a href="armenian.html">Հայերեն</a>
         <a href="azerbaijani.html">Azərbaycan dili</a>
         <a href="bambara.html">Bamanankan</a>
+        <a href="bashkir.html">Башҡорт теле</a>
         <a href="index.html">English</a>
         <a href="polish.html">Polski</a>
     </nav>
