--- a/empty.html
+++ b/empty.html
@@ -22,10 +22,9 @@
         <a href="assamese.html">অসমীয়া</a>
         <a href="azerbaijani.html">Azərbaycan dili</a>
         <a href="bambara.html">Bamanankan</a>
+        <a href="bashkir.html">Башҡорт теле</a>
         <a href="index.html">English</a>
         <a href="polish.html">Polski</a>
-
-        <a href=""></a>
     </nav>
     <section>
         <h1></h1>
