--- a/polish.html
+++ b/polish.html
@@ -23,6 +23,7 @@
         <a href="assamese.html">অসমীয়া</a>
         <a href="azerbaijani.html">Azərbaycan dili</a>
         <a href="bambara.html">Bamanankan</a>
+        <a href="bashkir.html">Башҡорт теле</a>
         <a href="index.html">English</a>
     </nav>
     <section>
