--- a/bashkir.html
+++ b/bashkir.html
@@ -23,6 +23,7 @@
         <a href="assamese.html">অসমীয়া</a>
         <a href="azerbaijani.html">Azərbaycan dili</a>
         <a href="bambara.html">Bamanankan</a>
+        <a href="basque.html">Euskara</a>
         <a href="index.html">English</a>
         <a href="polish.html">Polski</a>
     </nav>
