--- a/azerbaijani.html
+++ b/azerbaijani.html
@@ -23,6 +23,7 @@
         <a href="assamese.html">অসমীয়া</a>
         <a href="bambara.html">Bamanankan</a>
         <a href="bashkir.html">Башҡорт теле</a>
+        <a href="basque.html">Euskara</a>
         <a href="index.html">English</a>
         <a href="polish.html">Polski</a>
     </nav>
