--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <a href="azerbaijani.html">Azərbaycan dili</a>
         <a href="bambara.html">Bamanankan</a>
         <a href="bashkir.html">Башҡорт теле</a>
+        <a href="basque.html">Euskara</a>
         <a href="polish.html">Polski</a>
     </nav>
     <section>
