--- a/afrikaans.html
+++ b/afrikaans.html
@@ -15,7 +15,6 @@
     </header>
     <nav>
         Afrikaans
-        <a href="albanian.html">Shqip</a>
         <a href="amharic.html">አማርኛ</a>
         <a href="arabic.html">اَلْعَرَبِيَّةُ</a>
         <a href="armenian.html">Հայերեն</a>
@@ -24,6 +23,8 @@
         <a href="bambara.html">Bamanankan</a>
         <a href="bashkir.html">Башҡорт теле</a>
         <a href="basque.html">Euskara</a>
+        <a href="belarusian.html">Беларуская мова</a>
+        <a href="albanian.html">Shqip</a>
         <a href="index.html">English</a>
         <a href="polish.html">Polski</a>
     </nav>
