--- a/empty.html
+++ b/empty.html
@@ -14,8 +14,6 @@
         <h1></h1>
     </header>
     <nav>
-        <a href="afrikaans.html">Afrikaans</a>
-        <a href="albanian.html">Shqip</a>
         <a href="amharic.html">አማርኛ</a>
         <a href="arabic.html">اَلْعَرَبِيَّةُ</a>
         <a href="armenian.html">Հայերեն</a>
@@ -24,6 +22,9 @@
         <a href="bambara.html">Bamanankan</a>
         <a href="bashkir.html">Башҡорт теле</a>
         <a href="basque.html">Euskara</a>
+        <a href="belarusian.html">Беларуская мова</a>
+        <a href="afrikaans.html">Afrikaans</a>
+        <a href="albanian.html">Shqip</a>
         <a href="index.html">English</a>
         <a href="polish.html">Polski</a>
     </nav>
