--- a/polish.html
+++ b/polish.html
@@ -15,8 +15,6 @@
     </header>
     <nav>
         Polish
-        <a href="afrikaans.html">Afrikaans</a>
-        <a href="albanian.html">Shqip</a>
         <a href="amharic.html">አማርኛ</a>
         <a href="arabic.html">اَلْعَرَبِيَّةُ</a>
         <a href="armenian.html">Հայերեն</a>
@@ -25,6 +23,9 @@
         <a href="bambara.html">Bamanankan</a>
         <a href="bashkir.html">Башҡорт теле</a>
         <a href="basque.html">Euskara</a>
+        <a href="belarusian.html">Беларуская мова</a>
+        <a href="afrikaans.html">Afrikaans</a>
+        <a href="albanian.html">Shqip</a>
         <a href="index.html">English</a>
     </nav>
     <section>
