--- a/armenian.html
+++ b/armenian.html
@@ -15,8 +15,6 @@
     </header>
     <nav>
         Հայերեն
-        <a href="afrikaans.html">Afrikaans</a>
-        <a href="albanian.html">Shqip</a>
         <a href="amharic.html">አማርኛ</a>
         <a href="arabic.html">اَلْعَرَبِيَّةُ</a>
         <a href="assamese.html">অসমীয়া</a>
@@ -24,6 +22,9 @@
         <a href="bambara.html">Bamanankan</a>
         <a href="bashkir.html">Башҡорт теле</a>
         <a href="basque.html">Euskara</a>
+        <a href="belarusian.html">Беларуская мова</a>
+        <a href="afrikaans.html">Afrikaans</a>
+        <a href="albanian.html">Shqip</a>
         <a href="index.html">English</a>
         <a href="polish.html">Polski</a>
     </nav>
