--- a/albanian.html
+++ b/albanian.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="sq">
 <head>
     <meta charset="utf-8">
     <meta content="Piotr Żołnacz" name="author">
@@ -14,7 +14,6 @@
         <h1>Regjistriishpenzimeve - Politika e Privatësisë</h1>
     </header>
     <nav>
-        Shqip
     </nav>
     <section>
         <h1>Të dhënat tuaja qëndrojnë me ju</h1>
