--- a/amharic.html
+++ b/amharic.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="am">
 <head>
     <meta charset="utf-8">
     <meta content="Piotr Żołnacz" name="author">
@@ -14,7 +14,6 @@
         <h1>የክፍያዎች መዝገብ - የግላዊነት ፖሊሲ</h1>
     </header>
     <nav>
-        አማርኛ
     </nav>
     <section>
         <h1>ውሂብዎ ከእርስዎ ጋር ይቀራል</h1>
