--- a/arabic.html
+++ b/arabic.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="ar">
 <head>
     <meta charset="utf-8">
     <meta content="Piotr Żołnacz" name="author">
@@ -14,7 +14,6 @@
         <h1>سجلالنفقات - سياسة الخصوصية</h1>
     </header>
     <nav>
-        اَلْعَرَبِيَّةُ
     </nav>
     <section>
         <h1>بياناتك تبقى معك</h1>
