--- a/assamese.html
+++ b/assamese.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="as">
 <head>
     <meta charset="utf-8">
     <meta content="Piotr Żołnacz" name="author">
@@ -14,7 +14,6 @@
         <h1>খৰচৰবিৱৰণ - গোপনীয়তা নীতি</h1>
     </header>
     <nav>
-        অসমীয়া
     </nav>
     <section>
         <h1>আপোনাৰ তথ্য আপোনাৰ সৈতে থাকে</h1>
