--- a/bambara.html
+++ b/bambara.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="bm">
 <head>
     <meta charset="utf-8">
     <meta content="Piotr Żołnacz" name="author">
@@ -14,7 +14,6 @@
         <h1>Farilanjɛgɛ - Sɛbɛnkuraya Laada</h1>
     </header>
     <nav>
-        Bamanankan
     </nav>
     <section>
         <h1>Donu ka segin ye i ye</h1>
