--- a/basque.html
+++ b/basque.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="eu">
 <head>
     <meta charset="utf-8">
     <meta content="Piotr Żołnacz" name="author">
@@ -14,7 +14,6 @@
         <h1>Gastuenerregistroa - Pribatutasun-politika</h1>
     </header>
     <nav>
-        Euskara
     </nav>
     <section>
         <h1>Zure datuak zurekin geratzen dira</h1>
