--- a/belarusian.html
+++ b/belarusian.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="be">
 <head>
     <meta charset="utf-8">
     <meta content="Piotr Żołnacz" name="author">
@@ -14,7 +14,6 @@
         <h1>Часопіскоштраў – Палітыка прыватнасці</h1>
     </header>
     <nav>
-        Беларуская мова
     </nav>
     <section>
         <h1>Вашы даныя застаюцца з вамі</h1>
