--- a/bulgarian.html
+++ b/bulgarian.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="bg">
 <head>
     <meta charset="utf-8">
     <meta content="Piotr Żołnacz" name="author">
@@ -14,7 +14,6 @@
         <h1>Регистърразходи – Политика за поверителност</h1>
     </header>
     <nav>
-        Български
     </nav>
     <section>
         <h1>Вашите данни остават при вас</h1>
