--- a/burmese.html
+++ b/burmese.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="my">
 <head>
     <meta charset="utf-8">
     <meta content="Piotr Żołnacz" name="author">
@@ -14,7 +14,6 @@
         <h1>ค่าใช้จ่ายမှတ်တမ်း - ကိုယ်ပိုင်အချက်အလက်မူဝါဒ</h1>
     </header>
     <nav>
-        မြန်မာစာ
     </nav>
     <section>
         <h1>သင့်ဒေတာသည် သင့်နှင့်အတူရှိသည်</h1>
