--- a/catalan.html
+++ b/catalan.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="ca">
 <head>
     <meta charset="utf-8">
     <meta content="Piotr Żołnacz" name="author">
@@ -14,7 +14,6 @@
         <h1>Registrededespeses - Política de privacitat</h1>
     </header>
     <nav>
-        Català
     </nav>
     <section>
         <h1>Les teves dades es queden amb tu</h1>
