--- a/croatian.html
+++ b/croatian.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="hr">
 <head>
     <meta charset="utf-8">
     <meta content="Piotr Żołnacz" name="author">
@@ -14,7 +14,6 @@
         <h1>Evidencijatroškova - Pravila privatnosti</h1>
     </header>
     <nav>
-        Hrvatski
     </nav>
     <section>
         <h1>Vaši podaci ostaju kod vas</h1>
