--- a/empty.html
+++ b/empty.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="">
 <head>
     <meta charset="utf-8">
     <meta content="Piotr Żołnacz" name="author">
