--- a/polish.html
+++ b/polish.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="pl">
 <head>
     <meta charset="utf-8">
     <meta content="Piotr Żołnacz" name="author">
@@ -14,7 +14,6 @@
         <h1>Dziennik wydatków – Polityka prywatności</h1>
     </header>
     <nav>
-        Polish
     </nav>
     <section>
         <h1>Twoje dane pozostają z Tobą</h1>
