--- a/afrikaans.html
+++ b/afrikaans.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="af">
 <head>
     <meta charset="utf-8">
     <meta content="Piotr Żołnacz" name="author">
@@ -14,7 +14,6 @@
         <h1>Uitgaweslogboek - Privaatheidsbeleid</h1>
     </header>
     <nav>
-        Afrikaans
     </nav>
     <section>
         <h1>Jou data bly by jou</h1>
