--- a/armenian.html
+++ b/armenian.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="hy">
 <head>
     <meta charset="utf-8">
     <meta content="Piotr Żołnacz" name="author">
@@ -14,7 +14,6 @@
         <h1>Ծախսերիգրանցում - Գաղտնիության քաղաքականություն</h1>
     </header>
     <nav>
-        Հայերեն
     </nav>
     <section>
         <h1>Ձեր տվյալները մնում են ձեզ հետ</h1>
