--- a/azerbaijani.html
+++ b/azerbaijani.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="az">
 <head>
     <meta charset="utf-8">
     <meta content="Piotr Żołnacz" name="author">
@@ -14,7 +14,6 @@
         <h1>Xərcjurnalı - Məxfilik Siyasəti</h1>
     </header>
     <nav>
-        Azərbaycan dili
     </nav>
     <section>
         <h1>Məlumatlarınız sizinlə qalır</h1>
