--- a/bashkir.html
+++ b/bashkir.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="ba">
 <head>
     <meta charset="utf-8">
     <meta content="Piotr Żołnacz" name="author">
@@ -14,7 +14,6 @@
         <h1>Сығымдаржурналы - Хосусийлыҡ сәйәсәте</h1>
     </header>
     <nav>
-        Башҡорт теле
     </nav>
     <section>
         <h1>Һеҙҙең мәғлүмәт һеҙҙең менән ҡала</h1>
