--- a/bengali.html
+++ b/bengali.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="bn">
 <head>
     <meta charset="utf-8">
     <meta content="Piotr Żołnacz" name="author">
@@ -14,7 +14,6 @@
         <h1>খরচেরলগ - গোপনীয়তা নীতি</h1>
     </header>
     <nav>
-        বাংলা
     </nav>
     <section>
         <h1>আপনার ডেটা আপনার সাথে থাকে</h1>
