--- a/bosnian.html
+++ b/bosnian.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="bs">
 <head>
     <meta charset="utf-8">
     <meta content="Piotr Żołnacz" name="author">
@@ -14,7 +14,6 @@
         <h1>Dnevniktroškova - Politika privatnosti</h1>
     </header>
     <nav>
-        Bosanski
     </nav>
     <section>
         <h1>Vaši podaci ostaju s vama</h1>
