--- a/cebuano.html
+++ b/cebuano.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="ceb">
 <head>
     <meta charset="utf-8">
     <meta content="Piotr Żołnacz" name="author">
@@ -14,7 +14,6 @@
         <h1>TalaansaGasto - Palisiya sa Pagkapribado</h1>
     </header>
     <nav>
-        Sinugbuanong
     </nav>
     <section>
         <h1>Ang imong datos nagpabilin uban nimo</h1>
