--- a/chichewa.html
+++ b/chichewa.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="ny">
 <head>
     <meta charset="utf-8">
     <meta content="Piotr Żołnacz" name="author">
@@ -14,7 +14,6 @@
         <h1>BukuLogalayandalama - Mfundo Za Chinsinsi</h1>
     </header>
     <nav>
-        Nyanja
     </nav>
     <section>
         <h1>Zidziwitso zanu zimasungidwa nanu</h1>
