--- a/arabic.html
+++ b/arabic.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
     <meta charset="utf-8">
     <meta content="Piotr Żołnacz" name="author">
