--- a/empty.html
+++ b/empty.html
@@ -14,6 +14,92 @@
         <h1></h1>
     </header>
     <nav>
+        <a href="afrikaans.html" hreflang="af" lang="af" dir="ltr">Afrikaans</a>
+        <a href="albanian.html" hreflang="sq" lang="sq" dir="ltr">Shqip</a>
+        <a href="amharic.html" hreflang="am" lang="am" dir="ltr">አማርኛ</a>
+        <a href="arabic.html" hreflang="ar" lang="ar" dir="rtl">اَلْعَرَبِيَّةُ</a>
+        <a href="armenian.html" hreflang="hy" lang="hy" dir="ltr">Հայերեն</a>
+        <a href="assamese.html" hreflang="as" lang="as" dir="ltr">অসমীয়া</a>
+        <a href="azerbaijani.html" hreflang="az" lang="az" dir="ltr">Azərbaycan dili</a>
+        <a href="bambara.html" hreflang="bm" lang="bm" dir="ltr">Bamanankan</a>
+        <a href="bashkir.html" hreflang="ba" lang="ba" dir="ltr">Башҡорт теле</a>
+        <a href="basque.html" hreflang="eu" lang="eu" dir="ltr">Euskara</a>
+        <a href="belarusian.html" hreflang="be" lang="be" dir="ltr">Беларуская мова</a>
+        <a href="bengali.html" hreflang="bn" lang="bn" dir="ltr">বাংলা</a>
+        <a href="bosnian.html" hreflang="bs" lang="bs" dir="ltr">Bosanski</a>
+        <a href="bulgarian.html" hreflang="bg" lang="bg" dir="ltr">Български</a>
+        <a href="burmese.html" hreflang="my" lang="my" dir="ltr">မြန်မာစာ</a>
+        <a href="catalan.html" hreflang="ca" lang="ca" dir="ltr">Català</a>
+        <a href="cebuano.html" hreflang="ceb" lang="ceb" dir="ltr">Sinugbuanong Binisayâ</a>
+        <a href="chichewa.html" hreflang="ny" lang="ny" dir="ltr">Chichewa</a>
+        <a href="corsican.html" hreflang="co" lang="co" dir="ltr">Corsu</a>
+        <a href="croatian.html" hreflang="hr" lang="hr" dir="ltr">Hrvatski</a>
+        <a href="czech.html" hreflang="cs" lang="cs" dir="ltr">Čeština</a>
+        <a href="danish.html" hreflang="da" lang="da" dir="ltr">Dansk</a>
+        <a href="dutch.html" hreflang="nl" lang="nl" dir="ltr">Nederlands</a>
+        <a href="index.html" hreflang="en" lang="en" dir="ltr">English</a>
+        <a href="esperanto.html" hreflang="eo" lang="eo" dir="ltr">Esperanto</a>
+        <a href="estonian.html" hreflang="et" lang="et" dir="ltr">Eesti keel </a>
+        <a href="filipino.html" hreflang="fil" lang="fil" dir="ltr">Wikang Filipino</a>
+        <a href="finnish.html" hreflang="fi" lang="fi" dir="ltr">suomen kieli</a>
+        <a href="french.html" hreflang="fr" lang="fr" dir="ltr">Français</a>
+        <a href="galician.html" hreflang="gl" lang="gl" dir="ltr">Galego</a>
+        <a href="georgian.html" hreflang="ka" lang="ka" dir="ltr">ქართული</a>
+        <a href="german.html" hreflang="de" lang="de" dir="ltr">Deutsch</a>
+        <a href="greek.html" hreflang="el" lang="el" dir="ltr">Νέα Ελληνικά</a>
+        <a href="gujarati.html" hreflang="gu" lang="gu" dir="ltr">ગુજરાતી</a>
+        <a href="haitian.html" hreflang="ht" lang="ht" dir="ltr">Kreyòl Ayisyen</a>
+        <a href="hausa.html" hreflang="ha" lang="ha" dir="ltr">Harshen Hausa</a>
+        <a href="hebrew.html" hreflang="he" lang="he" dir="rtl">עברית</a>
+        <a href="hindi.html" hreflang="hi" lang="hi" dir="ltr">हिन्दी</a>
+        <a href="hungarian.html" hreflang="hu" lang="hu" dir="ltr">Magyar nyelv</a>
+        <a href="icelandic.html" hreflang="is" lang="is" dir="ltr">Íslenska</a>
+        <a href="indonesian.html" hreflang="id" lang="id" dir="ltr">bahasa Indonesia</a>
+        <a href="irish.html" hreflang="ga" lang="ga" dir="ltr">Gaeilge</a>
+        <a href="italian.html" hreflang="it" lang="it" dir="ltr">Italiano</a>
+        <a href="japanese.html" hreflang="ja" lang="ja" dir="ltr">日本語</a>
+        <a href="javanese.html" hreflang="jv" lang="jv" dir="ltr">Basa Jawa</a>
+        <a href="kannada.html" hreflang="kn" lang="kn" dir="ltr">ಕನ್ನಡ</a>
+        <a href="kazakh.html" hreflang="kk" lang="kk" dir="ltr">Қазақ тілі</a>
+        <a href="khmer.html" hreflang="km" lang="km" dir="ltr">ខេមរភាសា</a>
+        <a href="korean.html" hreflang="ko" lang="ko" dir="ltr">한국어</a>
+        <a href="latvian.html" hreflang="lv" lang="lv" dir="ltr">Latviski</a>
+        <a href="lithuanian.html" hreflang="lt" lang="lt" dir="ltr">Lietuvių</a>
+        <a href="macedonian.html" hreflang="mk" lang="mk" dir="ltr">Македонски</a>
+        <a href="malay.html" hreflang="ms" lang="ms" dir="ltr">bahasa Melayu</a>
+        <a href="malayalam.html" hreflang="ml" lang="ml" dir="ltr">മലയാളം</a>
+        <a href="maltese.html" hreflang="mt" lang="mt" dir="ltr">Malti</a>
+        <a href="marathi.html" hreflang="mr" lang="mr" dir="ltr">मराठी</a>
+        <a href="mongolian.html" hreflang="mn" lang="mn" dir="ltr">Монгол хэл</a>
+        <a href="nepali.html" hreflang="ne" lang="ne" dir="ltr">नेपाली</a>
+        <a href="norwegian.html" hreflang="no" lang="no" dir="ltr">Norsk</a>
+        <a href="pashto.html" hreflang="ps" lang="ps" dir="rtl">پښتو</a>
+        <a href="persian.html" hreflang="fa" lang="fa" dir="rtl">فارسی</a>
+        <a href="polish.html" hreflang="pl" lang="pl" dir="ltr">Polski</a>
+        <a href="portuguese.html" hreflang="pt" lang="pt" dir="ltr">Português</a>
+        <a href="punjabi.html" hreflang="pa" lang="pa" dir="ltr">ਪੰਜਾਬੀ</a>
+        <a href="romanian.html" hreflang="ro" lang="ro" dir="ltr">limba Română</a>
+        <a href="russian.html" hreflang="ru" lang="ru" dir="ltr">Русский язык</a>
+        <a href="sanskrit.html" hreflang="sa" lang="sa" dir="ltr">संस्कृतम्</a>
+        <a href="serbian.html" hreflang="sr" lang="sr" dir="ltr">Ссрпски</a>
+        <a href="simplified_chinese.html" hreflang="Hans" lang="Hans" dir="ltr">简体中文</a>
+        <a href="sinhala.html" hreflang="si" lang="si" dir="ltr">සිංහල</a>
+        <a href="slovak.html" hreflang="sk" lang="sk" dir="ltr">Slovenčina</a>
+        <a href="slovenian.html" hreflang="sl" lang="sl" dir="ltr">Slovenščina</a>
+        <a href="spanish.html" hreflang="es" lang="es" dir="ltr">Español</a>
+        <a href="sundanese.html" hreflang="su" lang="su" dir="ltr">basa Sunda</a>
+        <a href="swahili.html" hreflang="sw" lang="sw" dir="ltr">Kiswahili</a>
+        <a href="swedish.html" hreflang="sv" lang="sv" dir="ltr">Svenska</a>
+        <a href="tajik.html" hreflang="tg" lang="tg" dir="ltr">Тоҷикӣ</a>
+        <a href="tatar.html" hreflang="tt" lang="tt" dir="ltr">Татар теле</a>
+        <a href="telugu.html" hreflang="te" lang="te" dir="ltr">తెలుగు</a>
+        <a href="thai.html" hreflang="th" lang="th" dir="ltr">ภาษาไทย</a>
+        <a href="traditional_chinese.html" hreflang="zh-Hant" lang="zh-Hant" dir="ltr">繁體中文</a>
+        <a href="turkish.html" hreflang="tr" lang="tr" dir="ltr">Türkçe</a>
+        <a href="ukrainian.html" hreflang="uk" lang="uk" dir="ltr">Українська</a>
+        <a href="urdu.html" hreflang="ur" lang="ur" dir="rtl">اُردُو</a>
+        <a href="vietnamese.html" hreflang="vi" lang="vi" dir="ltr">tiếng Việt </a>
+        <a href="western_frisian.html" hreflang="fy" lang="fy" dir="ltr">Frysk</a>
     </nav>
     <section>
         <h1></h1>
