--- a/norwegian.html
+++ b/norwegian.html
@@ -14,6 +14,92 @@
         <h1>Utgiftslogg – Personvernerklæring</h1>
     </header>
     <nav>
+        <a dir="ltr" href="afrikaans.html" hreflang="af" lang="af">Afrikaans</a>
+        <a dir="ltr" href="albanian.html" hreflang="sq" lang="sq">Shqip</a>
+        <a dir="ltr" href="amharic.html" hreflang="am" lang="am">አማርኛ</a>
+        <a dir="rtl" href="arabic.html" hreflang="ar" lang="ar">اَلْعَرَبِيَّةُ</a>
+        <a dir="ltr" href="armenian.html" hreflang="hy" lang="hy">Հայերեն</a>
+        <a dir="ltr" href="assamese.html" hreflang="as" lang="as">অসমীয়া</a>
+        <a dir="ltr" href="azerbaijani.html" hreflang="az" lang="az">Azərbaycan dili</a>
+        <a dir="ltr" href="bambara.html" hreflang="bm" lang="bm">Bamanankan</a>
+        <a dir="ltr" href="bashkir.html" hreflang="ba" lang="ba">Башҡорт теле</a>
+        <a dir="ltr" href="basque.html" hreflang="eu" lang="eu">Euskara</a>
+        <a dir="ltr" href="belarusian.html" hreflang="be" lang="be">Беларуская мова</a>
+        <a dir="ltr" href="bengali.html" hreflang="bn" lang="bn">বাংলা</a>
+        <a dir="ltr" href="bosnian.html" hreflang="bs" lang="bs">Bosanski</a>
+        <a dir="ltr" href="bulgarian.html" hreflang="bg" lang="bg">Български</a>
+        <a dir="ltr" href="burmese.html" hreflang="my" lang="my">မြန်မာစာ</a>
+        <a dir="ltr" href="catalan.html" hreflang="ca" lang="ca">Català</a>
+        <a dir="ltr" href="cebuano.html" hreflang="ceb" lang="ceb">Sinugbuanong Binisayâ</a>
+        <a dir="ltr" href="chichewa.html" hreflang="ny" lang="ny">Chichewa</a>
+        <a dir="ltr" href="corsican.html" hreflang="co" lang="co">Corsu</a>
+        <a dir="ltr" href="croatian.html" hreflang="hr" lang="hr">Hrvatski</a>
+        <a dir="ltr" href="czech.html" hreflang="cs" lang="cs">Čeština</a>
+        <a dir="ltr" href="danish.html" hreflang="da" lang="da">Dansk</a>
+        <a dir="ltr" href="dutch.html" hreflang="nl" lang="nl">Nederlands</a>
+        <a dir="ltr" href="index.html" hreflang="en" lang="en">English</a>
+        <a dir="ltr" href="esperanto.html" hreflang="eo" lang="eo">Esperanto</a>
+        <a dir="ltr" href="estonian.html" hreflang="et" lang="et">Eesti keel </a>
+        <a dir="ltr" href="filipino.html" hreflang="fil" lang="fil">Wikang Filipino</a>
+        <a dir="ltr" href="finnish.html" hreflang="fi" lang="fi">suomen kieli</a>
+        <a dir="ltr" href="french.html" hreflang="fr" lang="fr">Français</a>
+        <a dir="ltr" href="galician.html" hreflang="gl" lang="gl">Galego</a>
+        <a dir="ltr" href="georgian.html" hreflang="ka" lang="ka">Galego</a>
+        <a dir="ltr" href="german.html" hreflang="de" lang="de">Deutsch</a>
+        <a dir="ltr" href="greek.html" hreflang="el" lang="el">Νέα Ελληνικά</a>
+        <a dir="ltr" href="gujarati.html" hreflang="gu" lang="gu">ગુજરાતી</a>
+        <a dir="ltr" href="haitian.html" hreflang="ht" lang="ht">Kreyòl Ayisyen</a>
+        <a dir="ltr" href="hausa.html" hreflang="ha" lang="ha">Harshen Hausa</a>
+        <a dir="rtl" href="hebrew.html" hreflang="he" lang="he">עברית</a>
+        <a dir="ltr" href="hindi.html" hreflang="hi" lang="hi">हिन्दी</a>
+        <a dir="ltr" href="hungarian.html" hreflang="hu" lang="hu">Magyar nyelv</a>
+        <a dir="ltr" href="icelandic.html" hreflang="is" lang="is">Íslenska</a>
+        <a dir="ltr" href="indonesian.html" hreflang="id" lang="id">bahasa Indonesia</a>
+        <a dir="ltr" href="irish.html" hreflang="ga" lang="ga">Gaeilge</a>
+        <a dir="ltr" href="italian.html" hreflang="it" lang="it">Italiano</a>
+        <a dir="ltr" href="japanese.html" hreflang="ja" lang="ja">日本語</a>
+        <a dir="ltr" href="javanese.html" hreflang="jv" lang="jv">Basa Jawa</a>
+        <a dir="ltr" href="kannada.html" hreflang="kn" lang="kn">ಕನ್ನಡ</a>
+        <a dir="ltr" href="kazakh.html" hreflang="kk" lang="kk">Қазақ тілі</a>
+        <a dir="ltr" href="khmer.html" hreflang="km" lang="km">ខេមរភាសា</a>
+        <a dir="ltr" href="korean.html" hreflang="ko" lang="ko">한국어</a>
+        <a dir="ltr" href="latvian.html" hreflang="lv" lang="lv">Latviski</a>
+        <a dir="ltr" href="lithuanian.html" hreflang="lt" lang="lt">Lietuvių</a>
+        <a dir="ltr" href="macedonian.html" hreflang="mk" lang="mk">Македонски</a>
+        <a dir="ltr" href="malay.html" hreflang="ms" lang="ms">bahasa Melayu</a>
+        <a dir="ltr" href="malayalam.html" hreflang="ml" lang="ml">മലയാളം</a>
+        <a dir="ltr" href="maltese.html" hreflang="mt" lang="mt">Malti</a>
+        <a dir="ltr" href="marathi.html" hreflang="mr" lang="mr">मराठी</a>
+        <a dir="ltr" href="mongolian.html" hreflang="mn" lang="mn">Монгол хэл</a>
+        <a dir="ltr" href="nepali.html" hreflang="ne" lang="ne">नेपाली</a>
+        <a dir="ltr" href="norwegian.html" hreflang="no" lang="no">Norsk</a>
+        <a dir="rtl" href="pashto.html" hreflang="ps" lang="ps">پښتو</a>
+        <a dir="rtl" href="persian.html" hreflang="fa" lang="fa">فارسی</a>
+        <a dir="ltr" href="polish.html" hreflang="pl" lang="pl">Polski</a>
+        <a dir="ltr" href="portuguese.html" hreflang="pt" lang="pt">Português</a>
+        <a dir="ltr" href="punjabi.html" hreflang="pa" lang="pa">ਪੰਜਾਬੀ</a>
+        <a dir="ltr" href="romanian.html" hreflang="ro" lang="ro">limba Română</a>
+        <a dir="ltr" href="russian.html" hreflang="ru" lang="ru">Русский язык</a>
+        <a dir="ltr" href="sanskrit.html" hreflang="sa" lang="sa">संस्कृतम्</a>
+        <a dir="ltr" href="serbian.html" hreflang="sr" lang="sr">Ссрпски</a>
+        <a dir="ltr" href="simplified_chinese.html" hreflang="Hans" lang="Hans">简体中文</a>
+        <a dir="ltr" href="sinhala.html" hreflang="si" lang="si">සිංහල</a>
+        <a dir="ltr" href="slovak.html" hreflang="sk" lang="sk">Slovenčina</a>
+        <a dir="ltr" href="slovenian.html" hreflang="sl" lang="sl">Slovenščina</a>
+        <a dir="ltr" href="spanish.html" hreflang="es" lang="es">Español</a>
+        <a dir="ltr" href="sundanese.html" hreflang="su" lang="su">basa Sunda</a>
+        <a dir="ltr" href="swahili.html" hreflang="sw" lang="sw">Kiswahili</a>
+        <a dir="ltr" href="swedish.html" hreflang="sv" lang="sv">Svenska</a>
+        <a dir="ltr" href="tajik.html" hreflang="tg" lang="tg">Тоҷикӣ</a>
+        <a dir="ltr" href="tatar.html" hreflang="tt" lang="tt">Татар теле</a>
+        <a dir="ltr" href="telugu.html" hreflang="te" lang="te">తెలుగు</a>
+        <a dir="ltr" href="thai.html" hreflang="th" lang="th">ภาษาไทย</a>
+        <a dir="ltr" href="traditional_chinese.html" hreflang="zh-Hant" lang="zh-Hant">繁體中文</a>
+        <a dir="ltr" href="turkish.html" hreflang="tr" lang="tr">Türkçe</a>
+        <a dir="ltr" href="ukrainian.html" hreflang="uk" lang="uk">Українська</a>
+        <a dir="rtl" href="urdu.html" hreflang="ur" lang="ur">اُردُو</a>
+        <a dir="ltr" href="vietnamese.html" hreflang="vi" lang="vi">tiếng Việt </a>
+        <a dir="ltr" href="western_frisian.html" hreflang="fy" lang="fy">Frysk</a>
     </nav>
     <section>
         <h1>Dine data forblir hos deg</h1>
